--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,78 @@
 buildscript {
     ext {
+        javaCompileVersion = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
+        defaultCompileSdkVersion = 33
+        defaultTargetSdkVersion = 33
+        defaultMinSdkVersion = 21
+        versions = [
+                androidGradlePlugin: "7.0.4",
+                kotlin             : "1.6.10",
+                hilt               : "2.44",
+                coreKtx            : "1.7.0",
+                appCompat          : "1.6.0",
+                compose            : "1.1.1",
+                lifecycleRuntimeKtx: "2.5.1",
+                activityCompose    : "1.6.1",
+                material           : "1.3.1",
+                coroutines         : "1.6.1",
+                junit              : "4.13.2",
+                mockito            : "5.1.1",
+                espressoJunit      : "1.1.5",
+                espressoCore       : "3.5.1"
+        ]
+        gradlePlugins = [
+                android: "com.android.tools.build:gradle:${versions.androidGradlePlugin}",
+                kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
+                hilt   : "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
+        ]
+        androidx = [
+                core                   : "androidx.core:core-ktx:${versions.coreKtx}",
+                appCompat              : "androidx.appcompat:appcompat:${versions.appCompat}",
+                composeUi              : "androidx.compose.ui:ui:${versions.compose}",
+                composeMaterial        : "androidx.compose.material:material:${versions.compose}",
+                composeUiToolingPreview: "androidx.compose.ui:ui-tooling-preview:${versions.compose}",
+                lifecycleRuntimeKtx    : "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycleRuntimeKtx}",
+                composeActivity        : "androidx.activity:activity-compose:${versions.activityCompose}"
+        ]
+        material = [
+                material: "com.google.android.material:material:${versions.material}"
+        ]
+        coroutines = [
+                coroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
+        ]
+        di = [
+                hiltAndroid : "com.google.dagger:hilt-android:${versions.hilt}",
+                hiltCompiler: "com.google.dagger:hilt-compiler:${versions.hilt}"
+        ]
+        test = [
+                junit     : "junit:junit:${versions.junit}",
+                coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}",
+                mockito   : "org.mockito.kotlin:mockito-kotlin:${versions.mockito}"
+        ]
+        androidTest = [
+                junit             : "androidx.test.ext:junit:${versions.espressoJunit}",
+                espressoCore      : "androidx.test.espresso:espresso-core:${versions.espressoCore}",
+                composeUiTestJunit: "androidx.compose.ui:ui-test-junit4:${versions.compose}"
+        ]
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath gradlePlugins.android
+        classpath gradlePlugins.kotlin
+        classpath gradlePlugins.hilt
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+/*
+
+buildscript {
+    ext {
         compose_ui_version = '1.1.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -8,3 +81,5 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
+
+ */
